Finished Styling the website

--- a/TravelProjectMinimalAPi/wwwroot/index.html
+++ b/TravelProjectMinimalAPi/wwwroot/index.html
@@ -64,38 +64,41 @@
 
                 <div class="cards">
                     <div class="card card-hotel">
-                        <img src="uploads/2090c9e8-6630-4477-9f8d-6c737717dca2.jpg" class="card-img-top" alt="...">
+                        <img src="images/jazz.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Mount Everest</h5>
-                            <p class="country"></p>
-                            <span class="rating">5</span>
+                            <h5 class="card-title">Jazz Aquaviva</h5>
+                            <p class="country">$100-$140</p>
+                            <span class="rating"></span>
                         </div>
                     </div>
 
                     <div class="card card-hotel">
-                        <img src="images/hurgada.jpg" class="card-img-top" alt="...">
+                        <img src="images/suncity.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Mount Everest</h5>
-                            <p class="country"></p>
-                            <span class="rating">5</span>
+                            <h5 class="card-title">Sun City Camp</h5>
+                            <p class="country">$80-$90</p>
+                            <span class="rating"></span>
                         </div>
                     </div>
 
                     <div class="card card-hotel">
-                        <img src="images/hurgada.jpg" class="card-img-top" alt="...">
+                        <img src="images/Quepos.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Mount Everest</h5>
-                            <p class="country"></p>
-                            <span class="rating">5</span>
+                            <h5 class="card-title">Quepos AirPlane</h5>
+                            <p class="country">$50-$65</p>
+                            <span class="rating"></span>
                         </div>
                     </div>
                 </div>
             </div>
 
             <div id="recommended" class="recommended">
-                <h4>Recommended</h4>
-                <p>Our personal recommendation blablabla</p>
-                <img style="width: 100%;" src="images/hurgada.jpg" alt="">
+                <h3>Recommended</h3>
+                <h4>Kathamundu</h4>
+                <p style="font-weight: 400;">
+                    Which serves as the capital of Nepal offers an amazing look at Nepal's culture as well as extraordinary views of the world's highest peaks including The Mount Everest
+                </p>
+                <img style="width: 100%;" src="images/kathamundu.jpg" alt="">
             </div>
 
         </div>
@@ -124,7 +127,7 @@
                             <span class="input-group-text" id="basic-addon2">Rating</span>
                         </div>
                         <input id="rating" name="rating" type="number" class="form-control" placeholder="Rating"
-                               aria-label="Rating" aria-describedby="basic-addon2" min="1" max="5" step="0.5" value="1">
+                               aria-label="Rating" aria-describedby="basic-addon2" min="1" max="5" step="0.5" value="5">
                     </div>
 
                     <button type="submit" class="btn btn-primary mt-3">Add</button>
